adjust main page, searching and theme

--- a/_includes/libdoc/head.html
+++ b/_includes/libdoc/head.html
@@ -117,6 +117,7 @@
     <link rel="stylesheet" href="{{ '/assets/libdoc/css/normalize.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/libdoc/fonts/icomoon/style.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/libdoc/css/libdoc.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/libdoc/css/custom.css' | relative_url }}">
 
     <!-- Prism syntax highlighter -->
     {% if site.prism.theme %}
